# ffi-lac

./: .gitignore  CMakeLists.txt  README.md  composer.json  main.c  main.cpp
examples/: example.php
include/: lac.h  lac_c.h
lib/: liblacffi.dylib  liblacffi.h  libthulac.dylib  libthulac.h
src/: LAC.php  ThuLAC.php  lac.cpp  lac_util.cpp
